dataset1235/2025-2/805158916/users/2029902540/executions/1584167357_2935826613.log
== RUN (2025-08-27 14:39:37)
-- CODE: 
TempC = int(input("digite o numero: "))
TempF = (9/5) * TempC + 32
print(TempF,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero: "))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:38)
-- CODE: 
celsius = int(input("digite os graus"))
fahrenheit = (9/5) * celsius + 32
print(round("fahrenheit,2")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round("fahrenheit,2")
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:39:03)
-- CODE: 
TempC = int(input("digite o numero"))
TempF = (9/5) * TempC + 32
print(round(TempF,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(TempF,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:42:47)
-- CODE: 
TempC = float(input("digite o numero: "))
TempF = (9/5) * TempC + 32
print(TempF)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite o numero: 32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
digite o numero: 428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
digite o numero: 105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
digite o numero: 50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
digite o numero: 54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
digite o numero: 104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:36:08)
-- CODE: 
celsius = int(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:42:31)
-- CODE: 
TempC = float(input("digite o numero: "))
TempF = (9/5) * TempC + 32
print(TempF)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite o numero: 32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
digite o numero: 428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
digite o numero: 105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
digite o numero: 50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
digite o numero: 54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
digite o numero: 104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:39:12)
-- CODE: 
TempC = int(input("digite o numero"))
TempF = (9/5) * TempC + 32
print(TempF,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC = int(input("digite o numero"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:05)
-- CODE: 
celsius = int(input("digite os graus"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
